all images now good

--- a/presentations/concurrency/deck.html
+++ b/presentations/concurrency/deck.html
@@ -100,8 +100,6 @@ class: center, middle
 
 ![](/assets/images/photo_2020-01-12_15-11-06.jpg)
 
-???
-
 ---
 class: center, middle
 
@@ -301,58 +299,51 @@ end
 * Now they all send in parallel - great!
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-59-12.jpg)
-
-???
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-59-08.jpg)
+![](/assets/images/ep1.png)
 
 ???
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-46.jpg)
-
-???
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-58-54.jpg)
+![](/assets/images/ep2.png)
 
 ???
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-58.jpg)
-
-???
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-58-44.jpg)
+![](/assets/images/ep3.png)
 
 ???
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-41.jpg)
+![](/assets/images/ep4.png)
 
 ???
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-35.jpg)
+![](/assets/images/ep5.png)
+
+???
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/ep6.png)
+
+???
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/ep7.png)
 
 ???
 
@@ -710,44 +701,39 @@ Time.utc_now().second              #=> 51
 * And now in pictures!
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0210_edit.PNG)
-
----
-class: center, middle
-
-![](/assets/images/IMG_0211_edit.PNG)
+![](/assets/images/r1.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0212_edit.PNG)
-
----
-class: center, middle
-
-![](/assets/images/IMG_0213_edit.PNG)
+![](/assets/images/r2.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0214_edit.PNG)
-
----
-class: center, middle
-
-![](/assets/images/IMG_0219_edit.PNG)
+![](/assets/images/r3.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0220_edit.PNG)
+![](/assets/images/r4.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0221_edit.PNG)
+![](/assets/images/r5.png)
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/r6.png)
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/r7.png)
 
 ---
 
@@ -1293,49 +1279,44 @@ end
 * This is all of course super simplified, but the gist of it I think is super interesting.
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0223_edit.PNG)
-
-
----
-class: center, middle
-
-![](/assets/images/IMG_0224_edit.PNG)
-
+![](/assets/images/ad1.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0225_edit.PNG)
-
-
----
-class: center, middle
-
-![](/assets/images/IMG_0226_edit.PNG)
+![](/assets/images/ad2.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0227_edit.PNG)
-
----
-class: center, middle
-
-![](/assets/images/IMG_0228_edit.PNG)
+![](/assets/images/ad3.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0229_edit.PNG)
+![](/assets/images/ad4.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/IMG_0230_edit.PNG)
+![](/assets/images/ad5.png)
 
--
+---
+class: center, middle, img-width-940
+
+![](/assets/images/ad6.png)
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/ad7.png)
+
+---
+class: center, middle, img-width-940
+
+![](/assets/images/ad8.png)
 
 ---
 class: padding
@@ -1406,116 +1387,59 @@ groud to this next pattern.
 you really don't want to write your own.
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-28.jpg)
-
-???
-1
+![](/assets/images/pp1.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-25.jpg)
-
-???
-2
+![](/assets/images/pp2.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-23.jpg)
-
-???
-3
+![](/assets/images/pp3.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-14.jpg)
-
-???
-4
+![](/assets/images/pp4.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-11.jpg)
-
-???
-5
+![](/assets/images/pp5.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-58-08.jpg)
-
-???
-6
+![](/assets/images/pp6.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-57-34.jpg)
-
-???
-7
+![](/assets/images/pp7.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-57-37.jpg)
-
-???
-8
+![](/assets/images/pp8.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-57-41.jpg)
-
-???
-9
+![](/assets/images/pp9.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-57-44.jpg)
-
-???
-10
+![](/assets/images/pp10.png)
 
 ---
-class: center, middle
+class: center, middle, img-width-940
 
-![](/assets/images/photo_2020-01-12_21-57-47.jpg)
-
-???
-11
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-57-49.jpg)
-
-???
-12
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-57-54.jpg)
-
-???
-13
-
----
-class: center, middle
-
-![](/assets/images/photo_2020-01-12_21-57-57.jpg)
-
-???
-14
+![](/assets/images/pp11.png)
 
 ---
 class: padding
